selfhost/test/typechecker/lambda/error_type_mismatch.5.out
Error at %FILE_NAME%:1:24
Type mismatch
  |  [1, 2, 3].map((x: Int, y: String) => x)
                            ^
Expected: Int
but instead found: String
