selfhost/test/typechecker/lambda/error_type_mismatch.5.abra
[1, 2, 3].map((x: Int, y: String) => x)